--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
