--- a/admin/package.json
+++ b/admin/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
+    "history": "^5.0.0",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
     "react-use": "^15.3.4",
     "redux": "^4.0.5",
