--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .DS_Store
 node_modules
+package-lock.json
 
 # admin
 /admin/package-lock.json
 /admin/node_modules
 /admin/dist
+/admin/.eslintcache
 
 # client
 /client/package-lock.json
