--- a/admin/package.json
+++ b/admin/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
     "husky": "^4.3.6",
+    "jest": "^26.6.0",
     "lint-staged": "^10.5.3",
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1"
