--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validation": "^3.0.6",
     "http-status-codes": "^2.1.4",
+    "joi": "^17.3.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8"
