--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/hardzeichyksiarhei/qr-menu-react#readme",
   "devDependencies": {
     "concurrently": "^5.3.0"
+  },
+  "dependencies": {
+    "react-router-dom": "^6.0.0-beta.0"
   }
 }
