feat: create settings after register user

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "install": "concurrently \"cd ./admin && npm install\" \"cd ./server && npm install\"",
-    "start": "concurrently \"cd ./admin && npm start\" \"cd ./server && npm run server\""
+    "start:admin": "concurrently \"cd ./admin && npm start\" \"cd ./server && npm run server\"",
+    "start:client": "concurrently \"cd ./client && npm start\" \"cd ./server && npm run server\"",
+    "start": "concurrently \"npm run start:admin\" \"npm run start:client\""
   },
   "repository": {
     "type": "git",
