--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "react-use": "^15.3.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
