--- a/admin/package.json
+++ b/admin/package.json
@@ -18,9 +18,11 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
+    "react-sortablejs": "^6.0.0",
     "react-use": "^15.3.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "sortablejs": "^1.13.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
