--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ package-lock.json
 /client/package-lock.json
 /client/node_modules
 /client/dist
+/client/.eslintcache
 
 # server
 /server/package-lock.json
