--- a/admin/package.json
+++ b/admin/package.json
@@ -24,6 +24,7 @@
     "redux-saga": "^1.1.3",
     "sortablejs": "^1.13.0",
     "styled-components": "^5.2.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
