--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.10.16",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
