--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "http-status-codes": "^2.1.4",
-    "joi": "^17.3.0",
-    "joi-objectid": "^3.0.1",
+    "i18n": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8"
   },
