--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=5000
 JWT_SECRET_KEY=rss-school
 MONGO_CONNECTION_STRING=mongodb+srv://dbUser:rsschool@cluster0.hjnrf.mongodb.net/qr-menu?retryWrites=true&w=majority
+
+CLIENT_URL=qr-menu-clone.com
