--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "http-status-codes": "^2.1.4",
     "i18n": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.8"
+    "mongoose": "^5.11.8",
+    "qrcode": "^1.4.4"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
