--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "history": "^5.0.0",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
