--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,10 @@
     "i18n": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
-    "qrcode": "^1.4.4"
+    "multer": "^1.4.2",
+    "multer-sharp-resizer": "^1.0.4",
+    "qrcode": "^1.4.4",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
