--- a/admin/package.json
+++ b/admin/package.json
@@ -12,10 +12,12 @@
     "classnames": "^2.2.6",
     "history": "^5.0.0",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fast-compare": "^3.2.0",
     "react-intl": "^5.10.16",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.0-beta.0",
