feat: minor update

--- a/admin/.env.production
+++ b/admin/.env.production
@@ -1,2 +1,4 @@
 REACT_APP_API_URL=https://qr-menu-clone-server.herokuapp.com/api
 REACT_APP_SERVER_URL=https://qr-menu-clone-server.herokuapp.com
+
+REACT_APP_CLIENT_URL=https://qr-menu-clone-client.herokuapp.com
