feat: add socket implementation

--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ PORT=5000
 JWT_SECRET_KEY=rss-school
 MONGO_CONNECTION_STRING=mongodb+srv://dbUser:rsschool@cluster0.hjnrf.mongodb.net/qr-menu?retryWrites=true&w=majority
 
-CLIENT_URL=qr-menu-clone.com
+CLIENT_URL=http://localhost:3000
