--- a/admin/package.json
+++ b/admin/package.json
@@ -26,6 +26,7 @@
     "react-use": "^15.3.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "socket.io-client": "^3.1.0",
     "sortablejs": "^1.13.0",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
