--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.2",
     "multer-sharp-resizer": "^1.0.4",
     "qrcode": "^1.4.4",
+    "socket.io": "^3.1.0",
     "uniqid": "^5.2.0"
   },
   "devDependencies": {
