--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.1",
     "react-fast-compare": "^3.2.0",
     "react-intl": "^5.10.16",
