--- a/admin/.env.development
+++ b/admin/.env.development
@@ -1,4 +1,4 @@
 REACT_APP_API_URL=http://localhost:5000/api
 REACT_APP_SERVER_URL=http://localhost:5000
 
-REACT_APP_CLIENT_URL=https://qr-menu-clone-client.herokuapp.com
+REACT_APP_CLIENT_URL=http://localhost:2000
