--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,12 @@
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
+    "react-use": "^17.1.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -50,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "node-sass": "^4.14.1"
   }
