--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-masonry-css": "^1.0.14",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
