--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,5 @@ PORT=5000
 JWT_SECRET_KEY=rss-school
 MONGO_CONNECTION_STRING=mongodb+srv://dbUser:rsschool@cluster0.hjnrf.mongodb.net/qr-menu?retryWrites=true&w=majority
 
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=http://localhost:2000
+ADMIN_URL=http://localhost:3000
