--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.0",
     "config": "^3.3.3",
     "cors": "^2.8.5",
+    "dateformat": "^4.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
