--- a/admin/package.json
+++ b/admin/package.json
@@ -16,7 +16,6 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.1",
     "react-fast-compare": "^3.2.0",
     "react-intl": "^5.10.16",
@@ -25,6 +24,7 @@
     "react-scripts": "4.0.1",
     "react-sortablejs": "^6.0.0",
     "react-use": "^15.3.4",
+    "recharts": "^2.0.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "socket.io-client": "^3.1.0",
