feat: add qr-code scanner

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,2 +1,4 @@
 REACT_APP_API_URL=http://localhost:5000/api
 REACT_APP_SERVER_URL=http://localhost:5000
+
+REACT_APP_CLIENT_URL=http://localhost:2000
