--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
     "react-sortablejs": "^6.0.0",
+    "react-transition-group": "^4.4.1",
     "react-use": "^15.3.4",
     "recharts": "^2.0.4",
     "redux": "^4.0.5",
